# llm-harness-starter

./: .env.example  .gitignore  CMakeLists.txt  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: ci.yml
examples/docs/: erling-haaland.md  nimbus-auth.md  nimbus-overview.md  nimbus-rate-limits.md  recent-world-cups.md  world-cup-2022.md  world-cup-2026.md  world-cup-overview.md  world-cup-records.md
src/: CMakeLists.txt  api.py  index.py  main.cpp
src/procedures/: answering-policy.md  calculation-policy.md  loader.py
src/providers/: __init__.py  base.py  openai_provider.py
src/retrieval/: __init__.py  store.py
src/tools/: __init__.py  registry.py
tools/: combine_files.py
