[project]
name = "llm-harness-starter"
version = "0.1.0"
description = "A clone-and-go scaffold for a grounded LLM agent: model + tools (MCP-compatible) + RAG + procedures."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.0",
    "openai>=1.68.2",
    "chromadb>=0.5.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E501", "F841", "F401", "F821"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
